--- a/app/src/main/res/layout/fragment_sign_up_congrats.xml
+++ b/app/src/main/res/layout/fragment_sign_up_congrats.xml
@@ -12,22 +12,24 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
+        android:fontFamily="@font/inter_bold"
         android:text="Congrats!"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewSignUpSubtitleCongrats"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/inter_bold"
         android:text="Now enjoy remember everything"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:layout_marginStart="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitleCongrats" />
@@ -36,22 +38,23 @@
         android:id="@+id/animation"
         android:layout_width="170dp"
         android:layout_height="170dp"
-        app:lottie_rawRes="@raw/animation"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
+        android:layout_marginTop="100dp"
         android:scaleX="3"
         android:scaleY="3"
-        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpSubtitleCongrats"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpSubtitleCongrats"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/animation" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/materialButtonProceed"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/white"
         android:layout_marginTop="120dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/inter_bold"
         android:text="Proceed"
         android:textColor="@color/purple"
         android:textSize="12sp"
