feat: colocando fonte na tela de create new card

--- a/app/src/main/res/layout/fragment_create_new_card.xml
+++ b/app/src/main/res/layout/fragment_create_new_card.xml
@@ -15,20 +15,20 @@
 
         <include
             android:id="@+id/toolbar"
+            layout="@layout/partial_toolbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="20dp"
-            layout="@layout/partial_toolbar" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayoutWhiteBackground"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/white"
             android:layout_marginTop="20dp"
+            android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +143,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
+                android:fontFamily="@font/inter_regular"
                 android:text="@string/want_a_favorite_one"
                 android:textColor="@color/purple"
                 android:textSize="14sp"
@@ -177,9 +178,10 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="55dp"
-                android:layout_marginEnd="55dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginEnd="55dp"
                 android:backgroundTint="@color/purple"
+                android:fontFamily="@font/inter_bold"
                 android:text="@string/save_card"
                 android:textColor="@color/white"
                 android:textSize="12sp"
