--- a/app/src/main/res/layout/partial_filters_sort.xml
+++ b/app/src/main/res/layout/partial_filters_sort.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEFEF">
 
     <TextView
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
-        android:text="@string/sort_by"
         android:fontFamily="@font/inter_bold"
+        android:text="@string/sort_by"
         android:textColor="@color/purple"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,15 +23,15 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSortBy"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSortBy">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chipGroup"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:paddingTop="5dp"
             android:layout_marginStart="15dp"
+            android:paddingTop="5dp"
             app:chipSpacingHorizontal="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
+                android:fontFamily="@font/inter_regular"
                 android:text="@string/description" />
 
             <com.google.android.material.chip.Chip
@@ -53,6 +54,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_regular"
                 android:text="@string/date" />
 
             <com.google.android.material.chip.Chip
@@ -60,6 +62,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_regular"
                 android:text="@string/category" />
 
             <com.google.android.material.chip.Chip
@@ -67,6 +70,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_regular"
                 android:text="@string/favorite" />
 
         </com.google.android.material.chip.ChipGroup>
