--- a/app/src/main/res/layout/item_image_favorite.xml
+++ b/app/src/main/res/layout/item_image_favorite.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
+            android:fontFamily="@font/inter_bold"
             android:textColor="@color/purple_700"
             android:textFontWeight="700"
             android:textSize="12sp"
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/inter_bold"
             android:textColor="@color/gray_dark"
             android:textFontWeight="700"
             android:textSize="12sp"
@@ -51,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="15dp"
+            android:fontFamily="@font/inter_regular"
             android:textColor="@color/gray"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
