--- a/app/src/main/res/layout/item_list_cards.xml
+++ b/app/src/main/res/layout/item_list_cards.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
-    android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listCardsItem"
+    android:layout_width="160dp"
+    android:layout_height="100dp"
     android:layout_marginStart="19dp"
     android:layout_marginTop="12dp"
     android:layout_marginBottom="12dp"
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
+            android:fontFamily="@font/inter_bold"
             android:textColor="@color/purple_700"
             android:textFontWeight="700"
             android:textSize="12sp"
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/inter_bold"
             android:textColor="@color/gray_dark"
             android:textFontWeight="700"
             android:textSize="12sp"
@@ -52,6 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="15dp"
+            android:fontFamily="@font/inter_regular"
             android:textColor="@color/gray"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
