feat: adiciona fontes ao fragment da home e corrige largura dos cards de categoria

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -105,6 +105,7 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="25dp"
                         android:text="@string/hello"
+                        android:fontFamily="@font/inter_light"
                         android:textColor="@color/white"
                         android:textSize="24sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -117,6 +118,7 @@
                         android:layout_marginTop="25dp"
                         android:textColor="@color/white"
                         android:textFontWeight="700"
+                        android:fontFamily="@font/inter_bold"
                         android:textSize="24sp"
                         app:layout_constraintStart_toEndOf="@id/textViewHello"
                         app:layout_constraintTop_toTopOf="parent"
@@ -130,6 +132,7 @@
                         android:layout_marginEnd="25dp"
                         android:background="@drawable/rounded_textview"
                         android:gravity="center"
+                        android:fontFamily="@font/inter_bold"
                         android:scaleType="centerCrop"
                         android:textColor="@color/purple"
                         android:textFontWeight="700"
@@ -147,6 +150,7 @@
                         android:layout_marginTop="8dp"
                         android:text="@string/advice_of_moment"
                         android:textColor="@color/white"
+                        android:fontFamily="@font/inter_bold"
                         android:textSize="16sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textViewHello" />
@@ -160,6 +164,7 @@
                         android:layout_marginEnd="25dp"
                         android:maxLength="180"
                         android:maxLines="4"
+                        android:fontFamily="@font/inter_regular"
                         android:textColor="@color/white"
                         android:textFontWeight="300"
                         android:textSize="16sp"
@@ -190,6 +195,7 @@
                         android:layout_marginEnd="25dp"
                         android:textColor="@color/white"
                         android:textFontWeight="400"
+                        android:fontFamily="@font/inter_regular"
                         android:textSize="12sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -253,6 +259,7 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="32dp"
                         android:text="@string/favorite"
+                        android:fontFamily="@font/inter_bold"
                         android:textColor="@color/purple"
                         android:textFontWeight="700"
                         android:textSize="20sp"
@@ -304,6 +311,7 @@
                                 android:layout_marginTop="18dp"
                                 android:text="@string/no_favorite_yet"
                                 android:textAlignment="center"
+                                android:fontFamily="@font/inter_bold"
                                 android:textColor="@color/purple_700"
                                 android:textFontWeight="700"
                                 android:textSize="18sp"
@@ -318,6 +326,7 @@
                                 android:layout_marginStart="70dp"
                                 android:layout_marginTop="15dp"
                                 android:layout_marginEnd="70dp"
+                                android:fontFamily="@font/inter_regular"
                                 android:text="@string/text_no_favorite_yet"
                                 android:textAlignment="center"
                                 android:textSize="15sp"
@@ -359,6 +368,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="20dp"
+                        android:fontFamily="@font/inter_bold"
                         android:text="@string/categories"
                         android:textColor="@color/purple"
                         android:textFontWeight="700"
@@ -369,10 +379,11 @@
                     <TextView
                         android:id="@+id/TextViewViewAll"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="15dp"
                         android:text="@string/view_all"
+                        android:fontFamily="@font/inter_regular"
                         android:textColor="@color/purple"
                         android:textFontWeight="400"
                         android:textSize="14sp"
@@ -426,6 +437,7 @@
                                 android:layout_marginTop="18dp"
                                 android:gravity="center"
                                 android:text="@string/no_cards_yet"
+                                android:fontFamily="@font/inter_bold"
                                 android:textColor="@color/purple_700"
                                 android:textFontWeight="700"
                                 android:textSize="16sp"
@@ -437,9 +449,10 @@
                                 android:id="@+id/textViewLooksLike"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="80dp"
+                                android:layout_marginStart="50dp"
                                 android:layout_marginTop="15dp"
-                                android:layout_marginEnd="70dp"
+                                android:fontFamily="@font/inter_regular"
+                                android:layout_marginEnd="50dp"
                                 android:text="@string/text_no_cards_yet"
                                 android:textAlignment="center"
                                 app:layout_constraintEnd_toEndOf="parent"
