--- a/app/src/main/res/layout/item_image_categories.xml
+++ b/app/src/main/res/layout/item_image_categories.xml
@@ -4,11 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardViewCategories"
-    android:layout_width="wrap_content"
+    android:layout_width="110dp"
     android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
     android:layout_marginStart="20dp"
-    android:layout_marginEnd="10dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="15dp">
 
@@ -43,6 +42,7 @@
             android:textColor="@color/purple"
             android:textFontWeight="300"
             android:textSize="14sp"
+            android:fontFamily="@font/inter_regular"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageViewType"
@@ -53,11 +53,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:textColor="@color/purple"
             android:textFontWeight="700"
             android:textSize="12sp"
+            android:fontFamily="@font/inter_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
