--- a/app/src/main/res/layout/item_image_favorite.xml
+++ b/app/src/main/res/layout/item_image_favorite.xml
@@ -25,6 +25,7 @@
             android:layout_marginTop="12dp"
             android:textColor="@color/purple_700"
             android:textFontWeight="700"
+            android:fontFamily="@font/inter_bold"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +40,7 @@
             android:layout_marginTop="5dp"
             android:textColor="@color/gray_dark"
             android:textFontWeight="700"
+            android:fontFamily="@font/inter_bold"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="15dp"
+            android:fontFamily="@font/inter_regular"
             android:textColor="@color/gray"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
