--- a/app/src/main/res/layout/item_list_cards.xml
+++ b/app/src/main/res/layout/item_list_cards.xml
@@ -12,6 +12,7 @@
     app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintListCardItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackgroundBorderless"
